--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,15 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql
+  username: root
+  password:
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: depot_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
